Fix z-index for header and navbar

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -157,6 +157,11 @@ h1 {
 /* ------------------------------ */
 /* ----------- HEADER ----------- */
 /* ------------------------------ */
+.header-bar,
+.navbar {
+    z-index: 1000;
+}
+
 .header-bar {
     height: 7rem;
     display: flex;
